# archive

./: CMakeLists.txt
extension/: dep_vuk_extra.cpp  fmt_geometry.hpp  glfw.hpp  imgui_extra.cpp  imgui_extra.hpp  vuk_extra.hpp  vuk_imgui.cpp  vuk_imgui.hpp
extension/icons/: font_awesome4.h
general/: astar.cpp  astar.hpp  bitmask_3d.cpp  bitmask_3d.hpp  color.cpp  color.hpp  file.cpp  file.hpp  file_path.cpp  file_path.hpp  function.hpp  global.hpp  hash.hpp  id_ptr.hpp  input.cpp  input.hpp  json.cpp  logger.hpp  memory.hpp  navigation_path.cpp  navigation_path.hpp  path.cpp  umap.hpp  vector.hpp
general/file/: asset_loader.cpp  asset_loader.hpp  file_cache.cpp  file_cache.hpp  file_path.cpp  file_path.hpp  json.cpp  json.hpp  resource.cpp  resource.hpp
general/math/: ease.hpp  geometry.cpp  geometry.hpp  math.cpp  math.hpp  matrix.hpp  matrix_math.cpp  matrix_math.hpp  noise.cpp  noise.hpp  quaternion.cpp  quaternion.hpp  spline.hpp
